# mpvpaper-stop

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  meson.build
.github/workflows/: release.yaml
include/: constants.h
src/: main.c
